# quant

./: .gitignore  Book1.csv  a2c_test.py  account.py  agent.py  all_etf.csv  all_stock.csv  baodata.py  client.py  data_source.py  db.py  dd.py  demo_env.py  dqn.ipynb  dqn_agent.py  global_var.py  hs300_stocks.csv  indictor.py  main.py  market_env.py  model.py  network.py  order.py  pg_agent.py  pg_test.py  ppo_a2c_test.py  ppo_agent.py  ppo_test.py  pre_close.csv  pre_process.py  pyproject.toml  run.py  run.sh  start_db.sh  t.ipynb  t.py  tmp.csv  train.py  trend.py  ts_test.py  (+1 more)
bakup/: 20240727T034535Z.manifest  20240926T135119Z.manifest
daily/: etf_day_2024-06-30 15:26:14.477447.csv
data/: 000001.csv  000002.csv  000004.csv  159509.csv  159611.csv  159819.csv  159869.csv  159870.csv  159928.csv  159941.csv  159949.csv  159995.csv  510050.csv  510300.csv  510880.csv  512010.csv  512660.csv  512690.csv  512800.csv  512880.csv  512980.csv  513050.csv  513060.csv  515030.csv  515790.csv  515880.csv  588000.csv
data/bao/: 000001.csv  (+264 more)
db/: .gitignore  influxd.bolt  influxd.sqlite
policy/: base_policy.py  ema_policy.py  three_policy.py
tdx_export/: SH#510050.txt  SH#510300.txt  SH#510880.txt  SH#512010.txt  SH#512660.txt  SH#512690.txt  SH#512800.txt  SH#512880.txt  SH#512980.txt  SH#513050.txt  SH#513060.txt  SH#515030.txt  SH#515790.txt  SH#515880.txt  SH#588000.txt  SZ#000001.txt  SZ#000002.txt  SZ#000004.txt  SZ#159509.txt  SZ#159611.txt  SZ#159819.txt  SZ#159869.txt  SZ#159870.txt  SZ#159928.txt  SZ#159941.txt  SZ#159949.txt  SZ#159995.txt
utils/: feichu.py
(+1966 files in other folders)
