[tool.poetry]
name = "quant"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.2"
numpy = "^2.0.0"
matplotlib = "^3.9.1"
gymnasium = "^0.29.1"
pandas = "^2.2.2"
mplfinance = "^0.12.10b0"
influxdb-client = "^1.44.0"
akshare = "^1.14.36"
schedule = "^1.2.2"
pyecharts = "^2.0.6"
django = "^5.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
